Update network list when device goes offline

Bug: 789125
Change-Id: I0879ef3ebf0a16bafc9a4223244b5835d3fa1f55