content/browser/renderer_host/p2p/socket_dispatcher_host.cc
@@ -161,7 +161,8 @@ bool P2PSocketDispatcherHost::OnMessageReceived(const IPC::Message& message) {
 
 void P2PSocketDispatcherHost::OnNetworkChanged(
     net::NetworkChangeNotifier::ConnectionType type) {
-  if (type == net::NetworkChangeNotifier::CONNECTION_NONE)
+  if (type == net::NetworkChangeNotifier::CONNECTION_NONE &&
+      !net::NetworkChangeNotifier::IsOffline())
     return;
   // Notify the renderer about changes to list of network interfaces.
   network_list_task_runner_->PostTask(
